# loamSpine

./: .deployment-approved  .deployment-checklist.md  .gitignore  AUDIT_COMPLETE.md  AUDIT_EXECUTION_COMPLETE_JAN_2026.md  AUDIT_FINDINGS_SUMMARY.md  AUDIT_SUMMARY.md  BIOME_OS_STANDALONE_SERVICE_RESPONSE.md  CHANGELOG.md  CLIPPY_FIXES_COMPLETE.md  CLIPPY_FIXES_DEEP_SOLUTIONS.md  COMMIT_MESSAGE.txt  COMPLETE_AND_PERFECT_DEC_28_2025.md  COMPREHENSIVE_AUDIT_REPORT_DEC_28_2025.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_v0.7.0.md  DEPLOYMENT_READY.md  DOCS_CLEANUP_COMPLETE.md  DOCS_CLEANUP_DEC_25_2025.md  DOCS_CLEANUP_PLAN_DEC_25_2025.md  DOCS_INDEX.md  DOCUMENTATION.md  Dockerfile  EVOLUTION_COMPLETE.md  EXECUTIVE_SUMMARY_DEC_27_2025.md  FINAL_REPORT_DEC_26_2025.md  HANDOFF.md  HARDCODING_ELIMINATION_AUDIT_JAN_9_2026.md  HARDCODING_ELIMINATION_COMPLETE.md  HARDCODING_ELIMINATION_IMPLEMENTATION_JAN_9_2026.md  IMMEDIATE_FIXES_REQUIRED.md  IMMEDIATE_HARDCODING_FIXES.md  INTEGRATION_GAPS.md  KNOWN_ISSUES.md  LICENSE  LICENSE-CC-BY-SA  LICENSE-ORC  (+37 more)
.cargo/: config.toml
crates/loam-spine-api/: Cargo.toml
crates/loam-spine-api/examples/: demo_rpc_service.rs
crates/loam-spine-api/src/: error.rs  health.rs  health_tests.rs  jsonrpc.rs  lib.rs  rpc.rs  service.rs  tarpc_server.rs  tarpc_server_tests.rs  tarpc_server_tests_compound.rs  tarpc_server_tests_lifecycle.rs  types.rs
crates/loam-spine-api/src/jsonrpc/: method_gate.rs  mod.rs  server.rs  tests.rs  tests_bond_ledger.rs  tests_btsp_gate.rs  tests_permanence_cert.rs  tests_phase3_transport.rs  tests_proof_anchor.rs  tests_protocol.rs  tests_protocol_transport.rs  tests_protocol_trio.rs  tests_protocol_wire.rs  tests_session.rs  tests_spine_entry.rs  tests_trust.rs  tests_validation.rs  tests_wire_errors.rs  uds.rs  wire.rs
crates/loam-spine-api/src/service/: anchor_ops.rs  bond_ops.rs  btsp_ops.rs  certificate_ops.rs  entry_ops.rs  integration_ops.rs  mod.rs  proof_ops.rs  service_tests.rs  service_tests_btsp.rs  service_tests_integration.rs  service_tests_tower_signing.rs  spine_ops.rs  trust_ops.rs
crates/loam-spine-api/src/types/: anchor.rs  bond_ledger.rs  certificate.rs  mod.rs  permanent_storage.rs  tests.rs  trust.rs
crates/loam-spine-api/tests/: api_integration.rs  provenance_trio.rs
crates/loam-spine-core/: Cargo.toml
crates/loam-spine-core/benches/: core_ops.rs  storage_ops.rs
crates/loam-spine-core/examples/: backup_restore.rs  certificate_lifecycle.rs  concurrent_ops.rs  demo_backup_restore.rs  demo_certificate_lifecycle.rs  demo_entry_types.rs  demo_hello_loamspine.rs  demo_inter_primal.rs  entry_types.rs  hello_loamspine.rs  proofs.rs  storage_backends.rs  temporal_moments.rs
crates/loam-spine-core/src/: backup.rs  btsp.rs  btsp_tests.rs  btsp_tests_integration.rs  capabilities.rs  certificate.rs  config.rs  config_tests.rs  constants.rs  discovery.rs  discovery_client.rs  entry.rs  error.rs  infant_discovery.rs  lib.rs  lib_tests.rs  manager.rs  neural_api.rs  neural_api_tests.rs  niche.rs  primal.rs  primal_names.rs  proof.rs  proof_tests.rs  resilience.rs  resilience_tests.rs  songbird.rs  spine.rs  spine_proptests.rs  spine_tests.rs  streaming.rs  streaming_tests.rs  sync.rs  trio_types.rs  trio_types_tests.rs  types.rs  types_tests.rs  waypoint.rs  waypoint_tests.rs
crates/loam-spine-core/src/backup/: mod.rs  tests.rs
crates/loam-spine-core/src/btsp/: beardog_client.rs  config.rs  frame.rs  handshake.rs  mod.rs  phase3.rs  provider_client.rs  wire.rs
crates/loam-spine-core/src/capabilities/: mod.rs  parser.rs  tests.rs  types.rs
crates/loam-spine-core/src/certificate/: escrow.rs  lifecycle.rs  metadata.rs  mod.rs  provenance.rs  tests.rs  types.rs  usage.rs
crates/loam-spine-core/src/constants/: env_resolution.rs  network.rs  network_tests.rs
crates/loam-spine-core/src/discovery/: dyn_traits.rs  manifest.rs  mod.rs  tests.rs  tests_attestation.rs  tests_registry.rs
crates/loam-spine-core/src/discovery_client/: mod.rs  tests.rs  tests_transport.rs
crates/loam-spine-core/src/entry/: entry_tests.rs  entry_tests_trust.rs  mod.rs  tests.rs
crates/loam-spine-core/src/error/: dispatch.rs  ipc.rs  mod.rs  storage_ext.rs  tests.rs
crates/loam-spine-core/src/infant_discovery/: backends.rs  cache.rs  mod.rs  tests.rs  tests_coverage.rs
crates/loam-spine-core/src/manager/: mod.rs  tests.rs
crates/loam-spine-core/src/neural_api/: mcp.rs  mod.rs  socket.rs  tests.rs  tests_mcp.rs  tests_registration.rs  tests_socket.rs
crates/loam-spine-core/src/service/: anchor.rs  anchor_tests.rs  bond_ledger.rs  certificate.rs  certificate_escrow.rs  certificate_loan.rs  certificate_tests.rs  certificate_tests_escrow.rs  expiry_sweeper.rs  infant_discovery.rs  infant_discovery_svc_tests.rs  integration.rs  integration_tests.rs  integration_tests_provenance.rs  integration_tests_slice_mgr.rs  integration_tests_spine_ops.rs  lifecycle.rs  lifecycle_tests.rs  lifecycle_tests_heartbeat.rs  mod.rs  service_mod_tests.rs  signals.rs  trust_ledger.rs  waypoint.rs  waypoint_svc_tests.rs
crates/loam-spine-core/src/storage/: certificate_tests.rs  memory.rs  mod.rs  redb.rs  redb_tests.rs  redb_tests_cert_errors.rs  redb_tests_coverage.rs  sled.rs  sled_tests.rs  sled_tests_certificate.rs  sqlite.rs  tests.rs
crates/loam-spine-core/src/sync/: mod.rs  streaming.rs  tests.rs  tests_resilient.rs
crates/loam-spine-core/src/temporal/: anchor.rs  mod.rs  moment.rs  time_marker.rs
crates/loam-spine-core/src/traits/: cli_signer.rs  cli_signer_tests.rs  cli_signer_tests_integration.rs  commit.rs  crypto_provider.rs  mod.rs  mod_tests.rs  signing.rs  slice.rs
crates/loam-spine-core/src/transport/: endpoint.rs  framing.rs  http.rs  mock.rs  mod.rs  neural_api.rs  neural_api_tests.rs  stream.rs
crates/loam-spine-core/tests/: chaos.rs  chaos_stress.rs  cli_signer_integration.rs  e2e.rs  fault_tolerance.rs  service_registry_integration.rs  songbird_integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_certificate.rs  fuzz_entry_parsing.rs  fuzz_spine_operations.rs
(+255 files in other folders)
