[workspace]
resolver = "2"
members = [
    "crates/loam-spine-core",
    "crates/loam-spine-api",
    "bin/loamspine-service",
]

[workspace.package]
version = "0.9.13"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/loamSpine"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Content addressing
blake3 = { version = "1.5", default-features = false, features = ["pure"] }

# UUIDs
uuid = { version = "1.11", features = ["v7", "serde"] }

# Testing
serial_test = "3.0"


[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups (lower priority, overridden by individual lints)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Production code quality enforcement
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
clone_on_ref_ptr = "warn"          # Catch unnecessary Arc/Rc clones
unnecessary_wraps = "warn"         # Catch Result<T, E> when E never used

# Cast safety (absorbed from airSpring/neuralSpring/groundSpring ecosystem pattern)
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
cast_possible_wrap = "deny"
cast_lossless = "warn"

# Allow some pedantic lints that are overly strict
module_name_repetitions = "allow"  # Acceptable for clarity (e.g., SpineConfig in spine mod)
missing_const_for_fn = "allow"     # Some functions can't be const due to trait bounds
significant_drop_tightening = "allow"  # Lock scopes are intentional in service code
must_use_candidate = "allow"       # Will add incrementally
multiple_crate_versions = "allow"  # Dependencies may have version conflicts
option_if_let_else = "allow"       # Pattern matching is clearer sometimes
redundant_pub_crate = "allow"      # pub(crate) is intentional for module boundaries
