[package]
name = "loam-spine-api"
description = "Pure Rust RPC API for LoamSpine - tarpc + JSON-RPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core crate
loam-spine-core = { path = "../loam-spine-core" }

# Pure Rust RPC - tarpc (no protobuf, no gRPC, no C++ tooling)
tarpc = { version = "0.37", features = ["full"] }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Additional utilities
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
blake3 = { workspace = true }

[lints]
workspace = true
