[package]
name = "loam-spine-api"
description = "Pure Rust RPC API for LoamSpine - tarpc + JSON-RPC"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core crate
loam-spine-core = { path = "../loam-spine-core" }

# Pure Rust RPC - tarpc (no protobuf, no gRPC, no C++ tooling)
# Explicit features instead of "full" — drops serde-transport-bincode
# to avoid pulling bincode v1 via tokio-serde (RUSTSEC-2025-0141)
tarpc = { version = "0.37", features = [
    "serde1",
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
    "unix",
] }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Additional utilities
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
blake3 = { workspace = true }
tempfile = "3.14"

[lints]
workspace = true
