[package]
name = "loam-spine-api"
description = "Pure Rust RPC API for LoamSpine - tarpc + JSON-RPC"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
loam-spine-core = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
blake3 = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
temp-env = "0.3.6"

[lints]
workspace = true
