[package]
name = "loam-spine-core"
description = "Permanence Layer - Selective Memory & Certificates"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Content addressing
blake3.workspace = true

# UUIDs for identifiers
uuid = { workspace = true }

# Persistent storage (pure Rust embedded database)
sled = { version = "0.34", optional = true }
redb = { version = "2.4", optional = true }

# Binary serialization for storage
bincode = "1.3"

# SQLite storage backend (optional, bundles C SQLite — not ecoBin compliant)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# Zero-copy buffer management for network operations
bytes = "1.9"
serde_bytes = "0.11"

# URL parsing (pure Rust, no C dependencies)
url = "2.5"

# HTTP client for service discovery — OPTIONAL, pure Rust (no TLS = no ring).
# Production path: Songbird via Tower Atomic (Pure Rust).
# For HTTPS, route through BearDog/Songbird TLS stack.
ureq = { version = "2.12", default-features = false, optional = true }

# DNS resolution for service discovery (optional: reduces binary size when unused)
hickory-resolver = { version = "0.24", optional = true }


# mDNS for local network service discovery (optional, experimental)
mdns = { version = "3.0", optional = true }
# Required for mDNS stream consumption in spawn_blocking (pin_mut, StreamExt)
futures-util = { version = "0.3", optional = true }
# Required by mdns; needed for block_on when running discovery in spawn_blocking
async-std = { version = "1.6", optional = true }

[features]
default = ["redb-storage", "dns-srv"]
redb-storage = ["dep:redb"]
sled-storage = ["dep:sled"]
# Enable testing utilities (MockSigner, MockVerifier) for use in downstream crates
testing = []
# Enable direct HTTP via ureq (pure Rust, no TLS, no ring/C).
# For HTTPS, route through BearDog/Songbird TLS stack.
discovery-http = ["dep:ureq"]
# Enable Tower Atomic transport (Songbird/NeuralAPI via Unix socket JSON-RPC).
# This is the ecoBin-compliant production transport — zero C dependencies.
tower-atomic = []
# Enable DNS SRV discovery (RFC 2782) for production service discovery
dns-srv = ["dep:hickory-resolver"]
# Enable mDNS local network service discovery (experimental)
mdns = ["dep:mdns", "dep:futures-util", "dep:async-std"]
# SQLite storage backend (bundles C SQLite — not ecoBin compliant)
sqlite = ["dep:rusqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
chrono = "0.4"
tempfile = { workspace = true }
proptest = "1.10.0"

[[bench]]
name = "core_ops"
harness = false

[lints]
workspace = true
