[package]
name = "loam-spine-core"
description = "Permanence Layer - Selective Memory & Certificates"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Content addressing
blake3.workspace = true

# UUIDs for identifiers
uuid = { workspace = true }

# Persistent storage (pure Rust embedded database)
redb = { version = "2.4", optional = true }

# Binary serialization for storage
rmp-serde = { workspace = true }

# Zero-copy buffer management for network operations
bytes = { workspace = true }

# URL parsing (pure Rust, no C dependencies)
url = { workspace = true }

# HTTP client for service discovery — OPTIONAL, pure Rust (no TLS = no ring).
# For HTTPS, route through a TLS capability provider.
ureq = { version = "2.12", default-features = false, optional = true }

# DNS resolution for service discovery (optional: reduces binary size when unused)
hickory-resolver = { version = "0.26", optional = true }


# mDNS for local network service discovery (optional, experimental)
# NOTE: mdns 3.0 depends on async-std (second async runtime alongside Tokio).
# Evolution path: replace with a Tokio-native mDNS implementation when available.
mdns = { version = "3.0", optional = true }
# Required for mDNS stream consumption in spawn_blocking (pin_mut, StreamExt)
futures-util = { version = "0.3", optional = true }
# Required by mdns internally; runs inside spawn_blocking to bridge to Tokio
async-std = { version = "1.6", optional = true }
base64 = "0.22.1"

[features]
default = ["redb-storage", "dns-srv"]
redb-storage = ["dep:redb"]
# Enable testing utilities (MockSigner, MockVerifier) for use in downstream crates
testing = []
# Enable direct HTTP via ureq (pure Rust, no TLS, no ring/C).
# For HTTPS, route through a TLS capability provider.
discovery-http = ["dep:ureq"]
# Enable Tower Atomic transport (NeuralAPI via Unix socket JSON-RPC).
# This is the ecoBin-compliant production transport — zero C dependencies.
tower-atomic = []
# Enable DNS SRV discovery (RFC 2782) for production service discovery
dns-srv = ["dep:hickory-resolver"]
# Enable mDNS local network service discovery (experimental)
mdns = ["dep:mdns", "dep:futures-util", "dep:async-std"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }
proptest = "1.10.0"

[[bench]]
name = "core_ops"
harness = false

[lints]
workspace = true
