[package]
name = "loam-spine-core"
description = "Permanence Layer - Selective Memory & Certificates"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Content addressing
blake3.workspace = true

# UUIDs for identifiers
uuid = { workspace = true }

# Persistent storage (pure Rust embedded database)
redb = { version = "2.4", optional = true }

# Binary serialization for storage
rmp-serde = { workspace = true }

# Zero-copy buffer management for network operations
bytes = { workspace = true }

# URL parsing (pure Rust, no C dependencies)
url = { workspace = true }

# HTTP client for service discovery — OPTIONAL, pure Rust (no TLS = no ring).
# For HTTPS, route through a TLS capability provider.
ureq = { version = "2.12", default-features = false, optional = true }

# DNS resolution for service discovery (optional: reduces binary size when unused)
hickory-resolver = { version = "0.26", optional = true }


# mDNS-SD for local network service discovery (optional).
# Pure Rust, manages its own daemon thread, no async runtime dependency.
mdns-sd = { version = "0.19", optional = true }
base64 = "0.22.1"

# BTSP Phase 3 symmetric transport crypto (RustCrypto, pure Rust, no C/asm)
chacha20poly1305 = "0.10"
hkdf = "0.13.0"
sha2 = "0.11.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
getrandom = "0.4.2"

[features]
default = ["redb-storage", "dns-srv"]
redb-storage = ["dep:redb"]
# Enable testing utilities (MockSigner, MockVerifier) for use in downstream crates
testing = []
# Enable direct HTTP via ureq (pure Rust, no TLS, no ring/C).
# For HTTPS, route through a TLS capability provider.
discovery-http = ["dep:ureq"]
# Enable Tower Atomic transport (NeuralAPI via Unix socket JSON-RPC).
# This is the ecoBin-compliant production transport — zero C dependencies.
tower-atomic = []
# Enable DNS SRV discovery (RFC 2782) for production service discovery
dns-srv = ["dep:hickory-resolver"]
# Enable mDNS-SD local network service discovery (pure Rust, no async runtime dep)
mdns = ["dep:mdns-sd"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }
proptest = "1.10.0"
temp-env = "0.3.6"

[[bench]]
name = "core_ops"
harness = false

[[bench]]
name = "storage_ops"
harness = false

[lints]
workspace = true
